# pldi26-artifact

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  build_artifact.sh  expected_paper_example1_clang.S  expected_paper_example1_gcc.S  expected_paper_example2_clang.S  expected_paper_example2_gcc.S  paper_example1.c  paper_example2.c  plot.py
opt-eqsat/: Cargo.toml
opt-eqsat/src/: analyses.rs  ast.rs  domains.rs  generate.rs  grammar.lalrpop  lib.rs  rewrites.rs  ssa.rs
