[package]
name = "opt-eqsat"
version = "0.1.0"
edition = "2024"

[lib]
name = "opt_eqsat"
path = "src/lib.rs"

[[bin]]
name = "experiment"

[dependencies]
colored = "*"
rand = "*"
rayon = "*"
rustc-hash = "*"
lalrpop-util = { version = "*", features = ["lexer", "unicode"] }
tabled = "*"

[build-dependencies]
lalrpop = "*"
